- Added new feature to refresh status bar - Added a new feature to choose a device to play music - Increase some catch on player when haven't any device active, 	get available devices and show to user to choose one.

--- a/package.json
+++ b/package.json
@@ -35,15 +35,20 @@
       {
         "command": "vscodefy.signIn",
         "title": "Spotify Logar"
-      },{
+      },
+      {
         "command": "vscodefy.getCode",
         "title": "Inserir código oauth do spotify"
+      },
+      {
+        "command": "vscodefy.pickDevice",
+        "title": "Pick a device"
       }
     ]
   },
   "scripts": {
     "linter": "eslint src",
-    "build": "babel src -s -D -d dist",
+    "build": "babel src --source-maps -D -d dist",
     "vscode:prepublish": "npm run build",
     "postinstall": "node ./node_modules/vscode/bin/install",
     "test": "node ./node_modules/vscode/bin/test"
