--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/iagolaguna/vscodefy.git"
+    "url": "https://github.com/iagolaguna/vscodefy.git"
   },
   "bugs": {
     "url": "https://github.com/iagolaguna/vscodefy/issues"
