--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "displayName": "Vscodefy",
   "description": "Use Spotify inside vscode in whatever platform.",
   "version": "0.0.2",
-  "icon": "img/icon.png",
+  "icon": "assets/icon.png",
   "license": "SEE LICENSE IN LICENSE",
   "publisher": "iagolaguna",
   "author": {
