--- a/package.json
+++ b/package.json
@@ -92,17 +92,17 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^7.0.1",
     "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.1.0"
-  },
-  "dependencies": {
+    "eslint-plugin-standard": "^3.1.0",
     "babel-polyfill": "^6.26.0",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
+    "vscode": "^1.1.21"
+  },
+  "dependencies": {
     "axios": "^0.18.0",
     "pubsub-js": "^1.6.0",
-    "rxjs": "^6.2.2",
-    "vscode": "^1.1.21"
+    "rxjs": "^6.2.2"
   }
 }
