- Added transform in babelrc - Fix package.json

--- a/.babelrc
+++ b/.babelrc
@@ -4,6 +4,7 @@
     ],
     "sourceMaps": true,
     "plugins": [
-      "transform-object-rest-spread"
+      "transform-object-rest-spread",
+      "transform-regenerator"
     ]
   }
