- Added a https agent to ignore self signed certificate need be tested

--- a/package.json
+++ b/package.json
@@ -101,8 +101,9 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "pubsub-js": "^1.6.0",
     "babel-polyfill": "^6.26.0",
+    "https": "^1.0.0",
+    "pubsub-js": "^1.6.0",
     "vscode": "^1.1.21"
   }
 }
